--- a/reactimagetranslator.client/package.json
+++ b/reactimagetranslator.client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
     "axios": "^1.10.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
