--- a/ReactImageTranslator.Server/Properties/launchSettings.json
+++ b/ReactImageTranslator.Server/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7076;http://localhost:5245"
+      "applicationUrl": "https://0.0.0.0:7076;http://0.0.0.0:5245" // "https://localhost:7076;http://localhost:5245"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
